td contributions and pub statement; reference updates

--- a/publications.tex
+++ b/publications.tex
@@ -1,10 +1,27 @@
-The content of this thesis is derived from the following publications.
-\todo{Add descriptions and chapter references beneath each citation?}
+The content of this thesis is derived from the following publications and
+manuscripts under review.
 
 \begin{itemize}
-    \item \fullcite{singleton2022towards}
-    \item \fullcite{singleton_booth_bipartite}
-    \item \fullcite{singleton2021logic} \todo{replace with synthese}
-    \item \fullcite{singleton_booth_22}
-    \item \fullcite{singleton_booth_tt_2022}
+    \item \cref{chapter_td}:
+    \begin{itemize}
+        \item \fullcite{singleton_booth_2020}
+        \item \fullcite{singleton2022towards}
+    \end{itemize}
+    \item \cref{chapter_bipartite_tournaments}:
+    \begin{itemize}
+        \item \fullcite{singleton_booth_bipartite}
+    \end{itemize}
+    \item \cref{chapter_expertise}:
+    \begin{itemize}
+        \item \fullcite{singleton2021logic}
+        \item \fullcite{singleton2022expetise}
+    \end{itemize}
+    \item \cref{chapter_belief_change}:
+    \begin{itemize}
+        \item \fullcite{singleton_booth_22}
+    \end{itemize}
+    \item \cref{chapter_truthtracking}:
+    \begin{itemize}
+        \item \fullcite{singleton_booth_tt_2022}
+    \end{itemize}
 \end{itemize}
