--- a/references.bib
+++ b/references.bib
@@ -68,7 +68,6 @@
 	Address = {Richland, SC},
 	Author = {Kruger, Justin and Endriss, Ulle and Fernandez, Raquel and Qing, Ciyang},
 	Booktitle = {Proceedings of the 2014 International Conference on Autonomous Agents and Multi-agent Systems},
-	Isbn = {978-1-4503-2738-1},
 	Keywords = {annotation, computational social choice, crowdsourcing},
 	Location = {Paris, France},
 	Numpages = {8},
@@ -157,7 +156,6 @@
 	Author = {Galland, Alban and Abiteboul, Serge and Marian, Am{\'e}lie and Senellart, Pierre},
 	Booktitle = {Proceedings of the Third ACM International Conference on Web Search and Data Mining},
 	Doi = {10.1145/1718487.1718504},
-	Isbn = {978-1-60558-889-6},
 	Keywords = {confidence, contradiction, corroboration, fix-point, probabilistic model, view},
 	Location = {New York, New York, USA},
 	Numpages = {10},
@@ -190,7 +188,6 @@
 	Author = {Zhi, Shi and Zhao, Bo and Tong, Wenzhu and Gao, Jing and Yu, Dian and Ji, Heng and Han, Jiawei},
 	Booktitle = {Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
 	Doi = {10.1145/2783258.2783339},
-	Isbn = {978-1-4503-3664-2},
 	Keywords = {information extraction, information integration system, knowledge base, knowledge graph, probabilistic graphical model, source quality, truth discovery, truth existence, truth finding},
 	Location = {Sydney, NSW, Australia},
 	Numpages = {10},
@@ -251,7 +248,6 @@
 	Address = {Arlington, Virginia, United States},
 	Author = {Tennenholtz, Moshe},
 	Booktitle = {Proceedings of the 20th Conference on Uncertainty in Artificial Intelligence},
-	Isbn = {0-9749039-0-6},
 	Location = {Banff, Canada},
 	Numpages = {8},
 	Pages = {544--551},
@@ -268,7 +264,6 @@
  booktitle = {Proceedings of the 23rd ACM SIGKDD International Conference on Knowledge Discovery and Data Mining},
  series = {KDD '17},
  year = {2017},
- isbn = {978-1-4503-4887-4},
  location = {Halifax, NS, Canada},
  pages = {967--976},
  numpages = {10},
@@ -290,7 +285,6 @@
  booktitle = {Proceedings of the 10th ACM Conference on Embedded Network Sensor Systems},
  series = {SenSys '12},
  year = {2012},
- isbn = {978-1-4503-1169-4},
  location = {Toronto, Ontario, Canada},
  pages = {141--154},
  numpages = {14},
@@ -304,7 +298,6 @@
 @inproceedings{gil2017,
 	location = {New York, {NY}, {USA}},
 	title = {On the Challenges of Mobile Crowdsensing for Traffic Estimation},
-	isbn = {978-1-4503-5459-2},
 	url = {http://doi.acm.org/10.1145/3131672.3136958},
 	doi = {10.1145/3131672.3136958},
 	series = {{SenSys} '17},
@@ -330,7 +323,6 @@
 @inproceedings{andersen2008,
 	location = {New York, {NY}, {USA}},
 	title = {Trust-based Recommendation Systems: An Axiomatic Approach},
-	isbn = {978-1-60558-085-2},
 	url = {http://doi.acm.org/10.1145/1367497.1367525},
 	doi = {10.1145/1367497.1367525},
 	series = {{WWW} '08},
@@ -354,7 +346,6 @@
 @inproceedings{yin_supervised_2011,
 	location = {New York, {NY}, {USA}},
 	title = {Semi-supervised Truth Discovery},
-	isbn = {978-1-4503-0632-4},
 	url = {http://doi.acm.org/10.1145/1963405.1963439},
 	doi = {10.1145/1963405.1963439},
 	series = {{WWW} '11},
@@ -374,7 +365,6 @@
     Knowledge Discovery and Data Mining},
     series = {KDD '16},
     year = {2016},
-    isbn = {978-1-4503-4232-2},
     location = {San Francisco, California, USA},
     pages = {1925--1934},
     numpages = {10},
@@ -407,7 +397,6 @@
 @inproceedings{wang_truth_2012,
 	location = {New York, {NY}, {USA}},
 	title = {On Truth Discovery in Social Sensing: A Maximum Likelihood Estimation Approach},
-	isbn = {978-1-4503-1227-1},
 	url = {http://doi.acm.org/10.1145/2185677.2185737},
 	doi = {10.1145/2185677.2185737},
 	series = {{IPSN} '12},
@@ -424,7 +413,6 @@
 	address = {New York, NY, USA},
 	series = {{KDD} '15},
 	title = {{FaitCrowd}: {Fine} {Grained} {Truth} {Discovery} for {Crowdsourced} {Data} {Aggregation}},
-	isbn = {978-1-4503-3664-2},
 	url = {http://doi.acm.org/10.1145/2783258.2783314},
 	doi = {10.1145/2783258.2783314},
 	booktitle = {Proceedings of the 21th {ACM} {SIGKDD} {International} {Conference} on {Knowledge} {Discovery} and {Data} {Mining}},
@@ -877,7 +865,6 @@ Carlos M. da Fonseca and Slobodan K. Simi{\'c} and Dejan V. To{\v s}i{\'c}",
 author = {Singleton, Joseph and Booth, Richard},
 title = {An Axiomatic Approach to Truth Discovery},
 year = {2020},
-isbn = {9781450375184},
 publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
 address = {Richland, SC},
 booktitle = {Proceedings of the 19th International Conference on Autonomous Agents and MultiAgent Systems},
@@ -906,7 +893,6 @@ series = {AAMAS ’20}
 	address = {New York},
 	series = {{WSDM} '10},
 	title = {Corroborating {Information} from {Disagreeing} {Views}},
-	isbn = {978-1-60558-889-6},
 	booktitle = {Proceedings of the {Third} {ACM} {International} {Conference} on {Web} {Search} and {Data} {Mining}},
 	publisher = {ACM},
 	author = {Galland, Alban and Abiteboul, Serge and Marian, Amélie and Senellart, Pierre},
@@ -974,6 +960,13 @@ series = {AAMAS ’20}
       year={2021},
       url={https://arxiv.org/abs/2107.10832},
       journal={ESSLLI 2021 Student Session},
+}
+
+@unpublished{singleton2022expetise,
+    title={Expertise and information: an epistemic logic perspective},
+    author={Joseph Singleton and Richard Booth},
+    year={2022},
+    pubstate={submitted},
 }
 
 @phdthesis{ozgun_evidence,
@@ -1064,7 +1057,6 @@ year="2021",
 publisher="Springer International Publishing",
 address="Cham",
 pages="543--555",
-isbn="978-3-030-89188-6"
 }
 
 @article{van2011dynamic,
@@ -1124,7 +1116,6 @@ numpages = {6},
 author = {Singleton, Joseph and Booth, Richard},
 title = {Rankings for Bipartite Tournaments via Chain Editing},
 year = {2021},
-isbn = {9781450383073},
 publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
 address = {Richland, SC},
 abstract = {Ranking the participants of a tournament has applications in voting, paired comparisons analysis, sports and other domains. In this paper we introduce bipartite tournaments, which model situations in which two different kinds of entity compete indirectly via matches against players of the opposite kind; examples include education (students/exam questions) and solo sports (golfers/courses). In particular, we look to find rankings via chain graphs, which correspond to bipartite tournaments in which the sets of adversaries defeated by the players on one side are nested with respect to set inclusion. Tournaments of this form have a natural and appealing ranking associated with them. We apply chain editing -- finding the minimum number of edge changes required to form a chain graph -- as a new mechanism for tournament ranking. The properties of these rankings are investigated in a probabilistic setting, where they arise as maximum likelihood estimators, and through the axiomatic method of social choice theory. Despite some nice properties, two problems remain: an important anonymity axiom is violated, and chain editing is NP-hard. We address both issues by relaxing the minimisation constraint in chain editing, and characterise the resulting ranking methods via a greedy approximation algorithm.},
@@ -1296,7 +1287,6 @@ year="2021",
 publisher="Springer International Publishing",
 address="Cham",
 pages="543--555",
-isbn="978-3-030-89188-6"
 }
 
 @article{konieczny2002merging,
@@ -1537,7 +1527,6 @@ abstract = "This survey covers recent contributions from the artificial intellig
     publisher="Springer Netherlands",
     address="Dordrecht",
     pages="143--173",
-    isbn="978-94-010-3272-8",
     doi="10.1007/978-94-010-3272-8_7",
 }
 
@@ -1644,7 +1633,6 @@ year="2021",
 publisher="Springer International Publishing",
 address="Cham",
 pages="50--65",
-isbn="978-3-030-75775-5"
 }
 
 @inproceedings{boutilier1998belief,
