--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,7 @@
 % \usepackage{newpxtext} % palatino font
 % \usepackage[T1]{fontenc}
 \usepackage{xcolor}
-\usepackage[backend=biber,backref=true]{biblatex}
+\usepackage[backend=biber,backref=true,style=authoryear]{biblatex}
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{amsthm}
