introduction finessing and reference tuning

--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,81 @@
+@inproceedings{singleton_booth_2020,
+author = {Singleton, Joseph and Booth, Richard},
+title = {An Axiomatic Approach to Truth Discovery},
+year = {2020},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+booktitle = {Proceedings of the 19th International Conference on Autonomous Agents and MultiAgent Systems},
+pages = {2011–2013},
+numpages = {3},
+keywords = {social choice theory, trust and reputation, axioms, truth discovery},
+location = {Virtual Event},
+series = {AAMAS ’20}
+}
+
+@inproceedings{singleton_booth_bipartite,
+author = {Singleton, Joseph and Booth, Richard},
+title = {Rankings for Bipartite Tournaments via Chain Editing},
+year = {2021},
+publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+address = {Richland, SC},
+booktitle = {Proceedings of the 20th International Conference on Autonomous Agents and MultiAgent Systems},
+pages = {1236–1244},
+numpages = {9},
+keywords = {chain graphs, social choice, ranking, tournaments},
+location = {Virtual Event},
+series = {AAMAS '21}
+}
+
+@article{singleton2021logic,
+      title={A Logic of Expertise},
+      author={Joseph Singleton},
+      year={2021},
+      url={https://arxiv.org/abs/2107.10832},
+      location = {Virtual Event},
+      journal={ESSLLI 2021 Student Session},
+}
+
+@unpublished{singleton2022expetise,
+    title={Expertise and information: an epistemic logic perspective},
+    author={Joseph Singleton and Richard Booth},
+    year={2022},
+    pubstate={submitted},
+    sorttitle={a},
+}
+
+@article{singleton2022towards,
+  title={Towards an axiomatic approach to truth discovery},
+  author={Singleton, Joseph and Booth, Richard},
+  journal={Autonomous Agents and Multi-Agent Systems},
+  volume={36},
+  number={2},
+  pages={1--49},
+  year={2022},
+  publisher={Springer},
+  sorttitle={b},
+}
+
 @inproceedings{singleton_booth_22,
     title     = {{Who’s the Expert? On Multi-source Belief Change}},
     author    = {Singleton, Joseph and Booth, Richard},
     booktitle = {{Proceedings of the 19th International Conference on Principles of Knowledge Representation and Reasoning}},
     pages     = {331--340},
     year      = {2022},
-    month     = {8},
     doi       = {10.24963/kr.2022/33},
     url       = {https://doi.org/10.24963/kr.2022/33},
+    sorttitle = {c},
+}
+
+@inproceedings{singleton_booth_tt_2022,
+	series = {{NMR} '22},
+	title = {Truth-Tracking with Non-Expert Information Sources},
+	url = {http://ceur-ws.org/Vol-3197/paper8.pdf},
+    booktitle = {Proceedings of the 20th {International} {Workshop} on {Non}-Monotonic {Reasoning}},
+	publisher = {CEUR Workshop Proceedings},
+	author = {Singleton, Joseph and Booth, Richard},
+	year = {2022},
+	pages = {80--91},
+    sorttitle = {d},
 }
 
 @conference{christoffbinary,
@@ -861,20 +930,6 @@ Carlos M. da Fonseca and Slobodan K. Simi{\'c} and Dejan V. To{\v s}i{\'c}",
   month     = {7},
 }
 
-@inproceedings{singleton_booth_2020,
-author = {Singleton, Joseph and Booth, Richard},
-title = {An Axiomatic Approach to Truth Discovery},
-year = {2020},
-publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-address = {Richland, SC},
-booktitle = {Proceedings of the 19th International Conference on Autonomous Agents and MultiAgent Systems},
-pages = {2011–2013},
-numpages = {3},
-keywords = {social choice theory, trust and reputation, axioms, truth discovery},
-location = {Auckland, New Zealand},
-series = {AAMAS ’20}
-}
-
 @inproceedings{denny_peerwise_2008,
   author = {Denny, Paul and Hamer, John and Luxton-Reilly, Andrew and Purchase, Helen},
   title = {PeerWise: Students Sharing Their Multiple Choice Questions},
@@ -952,21 +1007,6 @@ series = {AAMAS ’20}
     publisher = {Springer Netherlands},
     author = {Hans van Ditmarsch and Wiebe van der Hoek and Barteld Kooi},
     title = {Dynamic Epistemic Logic}
-}
-
-@article{singleton2021logic,
-      title={A Logic of Expertise},
-      author={Joseph Singleton},
-      year={2021},
-      url={https://arxiv.org/abs/2107.10832},
-      journal={ESSLLI 2021 Student Session},
-}
-
-@unpublished{singleton2022expetise,
-    title={Expertise and information: an epistemic logic perspective},
-    author={Joseph Singleton and Richard Booth},
-    year={2022},
-    pubstate={submitted},
 }
 
 @phdthesis{ozgun_evidence,
@@ -1110,21 +1150,6 @@ numpages = {6},
   pages={214--244},
   year={2010},
   publisher={OUP}
-}
-
-@inproceedings{singleton_booth_bipartite,
-author = {Singleton, Joseph and Booth, Richard},
-title = {Rankings for Bipartite Tournaments via Chain Editing},
-year = {2021},
-publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
-address = {Richland, SC},
-abstract = {Ranking the participants of a tournament has applications in voting, paired comparisons analysis, sports and other domains. In this paper we introduce bipartite tournaments, which model situations in which two different kinds of entity compete indirectly via matches against players of the opposite kind; examples include education (students/exam questions) and solo sports (golfers/courses). In particular, we look to find rankings via chain graphs, which correspond to bipartite tournaments in which the sets of adversaries defeated by the players on one side are nested with respect to set inclusion. Tournaments of this form have a natural and appealing ranking associated with them. We apply chain editing -- finding the minimum number of edge changes required to form a chain graph -- as a new mechanism for tournament ranking. The properties of these rankings are investigated in a probabilistic setting, where they arise as maximum likelihood estimators, and through the axiomatic method of social choice theory. Despite some nice properties, two problems remain: an important anonymity axiom is violated, and chain editing is NP-hard. We address both issues by relaxing the minimisation constraint in chain editing, and characterise the resulting ranking methods via a greedy approximation algorithm.},
-booktitle = {Proceedings of the 20th International Conference on Autonomous Agents and MultiAgent Systems},
-pages = {1236–1244},
-numpages = {9},
-keywords = {chain graphs, social choice, ranking, tournaments},
-location = {Virtual Event, United Kingdom},
-series = {AAMAS '21}
 }
 
 @article{delgrande2018general,
@@ -1339,13 +1364,6 @@ url = "http://www.sciencedirect.com/science/article/pii/S1566253505000771",
 author = "Eric Grégoire and Sébastien Konieczny",
 keywords = "Logic-based fusion, Information fusion, Belief fusion, Goal fusion",
 abstract = "This survey covers recent contributions from the artificial intelligence research literature about logic-based information fusion. First, the main current approaches dealing with the standard propositional logic formalism are presented and compared. Then, techniques for fusing weighted belief bases are discussed. Finally, relationships between propositional information fusion and related areas such as belief revision and multi-agent negotiation are mentioned."
-}
-
-@article{singleton_booth_22_preprint,
-      title={Who's the Expert? {O}n Multi-source Belief Change},
-      author = {Singleton, Joseph and Booth, Richard},
-      year={2022},
-      note = {https://arxiv.org/abs/2205.00077},
 }
 
 @article{baltag_tt_2019,
@@ -1591,28 +1609,6 @@ year = {2020},
   url={https://misinforeview.hks.harvard.edu/article/ibuprofen-narratives-in-five-european-countries-during-the-covid-19-pandemic/},
 }
 
-@article{singleton2022towards,
-  title={Towards an axiomatic approach to truth discovery},
-  author={Singleton, Joseph and Booth, Richard},
-  journal={Autonomous Agents and Multi-Agent Systems},
-  volume={36},
-  number={2},
-  pages={1--49},
-  year={2022},
-  publisher={Springer}
-}
-
-@inproceedings{singleton_booth_tt_2022,
-	series = {{NMR} '22},
-	title = {Truth-Tracking with Non-Expert Information Sources},
-	url = {http://ceur-ws.org/Vol-3197/paper8.pdf},
-    booktitle = {Proceedings of the 20th {International} {Workshop} on {Non}-Monotonic {Reasoning}},
-	publisher = {CEUR Workshop Proceedings},
-	author = {Singleton, Joseph and Booth, Richard},
-	year = {2022},
-	pages = {80--91},
-}
-
 @article{yasser_21,
   title={Information Revision: The Joint Revision of Belief and Trust},
   author={Yasser, Ammar and Ismail, Haythem O.},
@@ -1643,3 +1639,11 @@ pages="50--65",
   year={1998}
 }
 
+@book{moulin_2016,
+    place={Cambridge},
+    title={Handbook of Computational Social Choice},
+    DOI={10.1017/CBO9781107446984},
+    publisher={Cambridge University Press},
+    editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, Jérôme and Procaccia, Ariel D.Editors},
+    year={2016}
+}
