--- a/macros.tex
+++ b/macros.tex
@@ -68,5 +68,7 @@
 
 % misc operators
 \newcommand{\trcls}{+}  % transitive closure
+\newcommand{\modalnec}{\Box}
+\newcommand{\modalposs}{\Diamond}
 
 \renewcommand{\cite}{\parencite}
