--- a/references.bib
+++ b/references.bib
@@ -1647,3 +1647,35 @@ pages="50--65",
     editor={Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, Jérôme and Procaccia, Ariel D.Editors},
     year={2016}
 }
+
+@InCollection{seplogicmodal,
+	author       =	{Garson, James},
+	title        =	{{Modal Logic}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/sum2021/entries/logic-modal/}},
+	year         =	{2021},
+	edition      =	{{S}ummer 2021},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@inproceedings{dastani2004inferring,
+  title={Inferring trust},
+  author={Dastani, Mehdi and Herzig, Andreas and Hulstijn, Joris and van Der Torre, Leendert},
+  booktitle={International Workshop on Computational Logic in Multi-Agent Systems},
+  pages={144--160},
+  year={2004},
+  organization={Springer}
+}
+
+@article{bonanno2005simple,
+  title={A simple modal logic for belief revision},
+  author={Bonanno, Giacomo},
+  journal={Synthese},
+  volume={147},
+  number={2},
+  pages={193--228},
+  year={2005},
+  publisher={Springer}
+}
+
