--- a/references.bib
+++ b/references.bib
@@ -78,11 +78,9 @@ series = {AAMAS '21}
     sorttitle = {d},
 }
 
-@conference{christoffbinary,
+@inproceedings{christoffbinary,
 	Author = {Christoff, Zo{\'e} and Grossi, Davide},
-	Booktitle = {Proc. TARK 2017},
-	Date-Added = {2019-09-03 22:16:59 +0100},
-	Date-Modified = {2019-09-03 22:17:43 +0100},
+	Booktitle = {TARK},
 	Title = {Binary Voting with Delegable Proxy: An Analysis of Liquid Democracy},
 	Year = {2017}}
 
@@ -1013,7 +1011,7 @@ Carlos M. da Fonseca and Slobodan K. Simi{\'c} and Dejan V. To{\v s}i{\'c}",
   TITLE = {{Evidence in Epistemic Logic : A Topological Perspective}},
   AUTHOR = {{\"{O}}zg{\"{u}}n, Ayb{\"{u}}ke},
   NUMBER = {2017LORR0200},
-  SCHOOL = {{Universit{\'e} de Lorraine}},
+  SCHOOL = {{University of Amsterdam}, {University of Lorraine}},
   YEAR = {2017},
   MONTH = Oct,
   TYPE = {Theses},
@@ -1118,7 +1116,6 @@ number = {1},
 pages = {106-133},
 year = {2014},
 author = {Johan van {Benthem} and David Fern{\'{a}}ndez-Duque and Eric Pacuit},
-keywords = {Modal logic, Neighborhood semantics, Plausibility ordering, Evidence-based reasoning, Doxastic logic},
 }
 
 @article{Liau_2003,
@@ -1677,5 +1674,100 @@ pages="50--65",
   pages={193--228},
   year={2005},
   publisher={Springer}
+}
+
+@phdthesis{rodenhauser2014matter,
+  title={A matter of trust: Dynamic attitudes in epistemic logic},
+  author={Rodenh{\"a}user, Leif Benjamin},
+  year={2014},
+  school={Institute for Logic, Language and Computation, University of Amsterdam}
+}
+
+@phdthesis{tagliaferri2019logical,
+  title={A logical language for computational trust},
+  author={Tagliaferri, Mirko},
+  year={2019},
+  school={The University of Urbino}
+}
+
+@inproceedings{moss1992topological,
+  title={Topological Reasoning and The Logic of Knowledge.},
+  author={Moss, Lawrence S and Parikh, Rohit},
+  booktitle={TARK},
+  volume={92},
+  pages={95--105},
+  year={1992},
+}
+
+@inproceedings{van2012evidence,
+  title={Evidence logic: A new look at neighborhood structures},
+  author={Johan van Benthem and David Fern{\'{a}}ndez-Duque and Eric Pacuit},
+  year={2012},
+  booktitle={Advances in Modal Logic},
+  publisher={College Publications},
+}
+
+@article{mckinsey41,
+ URL = {http://www.jstor.org/stable/2267105},
+ author = {J. C. C. McKinsey},
+ journal = {The Journal of Symbolic Logic},
+ number = {4},
+ pages = {117--134},
+ publisher = {Association for Symbolic Logic},
+ title = {A Solution of the Decision Problem for the Lewis systems S2 and S4, with an Application to Topology},
+ urldate = {2022-09-29},
+ volume = {6},
+ year = {1941}
+}
+
+@article{mckinseytarski44,
+ URL = {http://www.jstor.org/stable/1969080},
+ author = {J. C. C. McKinsey and Alfred Tarski},
+ journal = {Annals of Mathematics},
+ number = {1},
+ pages = {141--191},
+ publisher = {Annals of Mathematics},
+ title = {The Algebra of Topology},
+ urldate = {2022-09-29},
+ volume = {45},
+ year = {1944}
+}
+
+@InCollection{sep_del,
+	author       =	{Baltag, Alexandru and Renne, Bryan},
+	title        =	{{Dynamic Epistemic Logic}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/win2016/entries/dynamic-epistemic/}},
+	year         =	{2016},
+	edition      =	{{W}inter 2016},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@inproceedings{holliday2009dynamic,
+  title={Dynamic testimonial logic},
+  author={Holliday, Wesley H},
+  booktitle={International Workshop on Logic, Rationality and Interaction},
+  pages={161--179},
+  year={2009},
+  organization={Springer}
+}
+
+@article{gierasimczuk2009bridging,
+  title={Bridging learning theory and dynamic epistemic logic},
+  author={Gierasimczuk, Nina},
+  journal={Synthese},
+  volume={169},
+  number={2},
+  pages={371--384},
+  year={2009},
+  publisher={Springer}
+}
+
+@phdthesis{gierasimczuk2010knowing,
+  title={Knowing one's limits: logical analysis of inductive inference},
+  author={Gierasimczuk, Nina},
+  year={2010},
+  school={Institute for Logic, Language and Computation, University of Amsterdam}
 }
 
