introduction: write about belief change

--- a/macros.tex
+++ b/macros.tex
@@ -64,3 +64,8 @@
 % misc operators
 \newcommand{\trcls}{+}  % transitive closure
 \renewcommand{\cite}{\parencite}
+
+% logical symbols
+\newcommand{\limplies}{\rightarrow}
+\newcommand{\liff}{\leftrightarrow}
+\newcommand{\limpliedby}{\leftarrow}
