--- a/main.tex
+++ b/main.tex
@@ -34,7 +34,7 @@
 
 % styles
 \pagestyle{ruled}
-\chapterstyle{southall}
+\chapterstyle{dash}
 \renewcommand{\midpartskip}{\par\parbox{\textwidth}{\hrulefill}\par}
 
 % links
