--- a/references.bib
+++ b/references.bib
@@ -410,6 +410,15 @@ series = {AAMAS '21}
 	keywords = {toread, probability},
 }
 
+@book{ferme_2018,
+    title = {Belief Change},
+    series = {SpringerBriefs in Intelligent Systems},
+    publisher = {Springer},
+    year = {2018},
+    author = {Ferm{\'e}, Eduardo and Hansson, Sven Ove},
+    doi = {https://doi.org/10.1007/978-3-319-60535-7},
+}
+
 @inproceedings{yin_supervised_2011,
 	location = {New York, {NY}, {USA}},
 	title = {Semi-supervised Truth Discovery},
@@ -918,7 +927,7 @@ Carlos M. da Fonseca and Slobodan K. Simi{\'c} and Dejan V. To{\v s}i{\'c}",
 
 @inproceedings{everaere2020,
   title     = {Belief Merging Operators as Maximum Likelihood Estimators},
-  author    = {Everaere, Patricia and Konieczny, Sebastien and Marquis, Pierre},
+  author    = {Everaere, Patricia and Konieczny, Sébastien and Marquis, Pierre},
   booktitle = {Proceedings of the Twenty-Ninth International Joint Conference on
                Artificial Intelligence, {IJCAI-20}},
   publisher = {International Joint Conferences on Artificial Intelligence Organization},
@@ -1313,7 +1322,7 @@ pages="543--555",
 
 @article{konieczny2002merging,
   title={Merging information under constraints: a logical framework},
-  author={Konieczny, S{\'e}bastien and Pino P{\'e}rez, Ram{\'o}n},
+  author={S{\'e}bastien Konieczny and Ram{\'o}n {Pino P{\'e}rez}},
   journal={Journal of Logic and Computation},
   volume={12},
   number={5},
@@ -1606,12 +1615,16 @@ year = {2020},
   url={https://misinforeview.hks.harvard.edu/article/ibuprofen-narratives-in-five-european-countries-during-the-covid-19-pandemic/},
 }
 
-@article{yasser_21,
-  title={Information Revision: The Joint Revision of Belief and Trust},
-  author={Yasser, Ammar and Ismail, Haythem O.},
-  year={2020},
-  journal={NMR}
+@inproceedings{yasser_21,
+    author={Yasser, Ammar and Ismail, Haythem O.},
+	series = {{NMR} '20},
+    title={Information Revision: The Joint Revision of Belief and Trust},
+    booktitle = {Proceedings of the 18th {International} {Workshop} on {Non}-Monotonic {Reasoning}},
+	year = {2020},
+    pages = {150--159},
+    url = {https://nmr2020.dc.uba.ar/WorkshopNotes.pdf}
 }
+
 
 @InProceedings{yasser_journal_2021,
 author="Yasser, Ammar
@@ -1770,4 +1783,82 @@ pages="50--65",
   year={2010},
   school={Institute for Logic, Language and Computation, University of Amsterdam}
 }
+
+@InCollection{sep_belief_change,
+	author       =	{Hansson, Sven Ove},
+	title        =	{{Logic of Belief Revision}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/spr2022/entries/logic-belief-revision/}},
+	year         =	{2022},
+	edition      =	{{S}pring 2022},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@article{booth_belief_2011,
+	title = {Belief Change},
+	author = {Booth, Richard and Meyer, Thomas},
+    journal = {Journal of Indian Council of Philosophical Research},
+    volume = {27},
+    number = {2},
+    pages = {379--412},
+    year = {2011},
+    publisher={Indian Council of Philosophical Research}
+}
+
+@article{Darwiche_1997,
+	doi = {10.1016/s0004-3702(96)00038-0},
+	url = {https://doi.org/10.1016%2Fs0004-3702%2896%2900038-0},
+	year = 1997,
+	month = {1},
+	publisher = {Elsevier {BV}},
+	volume = {89},
+	number = {1-2},
+	pages = {1--29},
+	author = {Adnan Darwiche and Judea Pearl},
+	title = {On the logic of iterated belief revision},
+	journal = {Artificial Intelligence}
+}
+
+@inbook{katsuno_mendelzon_1992,
+    series={Cambridge Tracts in Theoretical Computer Science},
+    title={On the difference between updating a knowledge base and revising it},
+    DOI={10.1017/CBO9780511526664.007},
+    booktitle={Belief Revision},
+    publisher={Cambridge University Press},
+    author={Katsuno, Hirofumi and Mendelzon, Alberto O.},
+    editor={Gärdenfors, Peter},
+    year={1992},
+    pages={183–203},
+    collection={Cambridge Tracts in Theoretical Computer Science}}
+
+@book{hansson1999,
+    title={A Textbook of Belief Dynamics},
+    subtitle={Theory Change and Database Updating},
+    publisher={Kluwer Academic Publishers},
+    series={Sven Ove Hansson},
+    year={1999},
+    author={Sven Ove Hansson},
+}
+
+@article{makinson1997screened,
+  title={Screened revision},
+  author={Makinson, David},
+  journal={Theoria},
+  volume={63},
+  number={1-2},
+  pages={14--23},
+  year={1997}
+}
+
+@InProceedings{booth2005,
+    author="Booth, Richard",
+    editor="Kern-Isberner, Gabriele and R{\"o}dder, Wilhelm and Kulmann, Friedhelm",
+    title="On the Logic of Iterated Non-prioritised Revision",
+    booktitle="Conditionals, Information, and Inference",
+    year="2005",
+    publisher="Springer Berlin Heidelberg",
+    address="Berlin, Heidelberg",
+    pages="86--107",
+    }
 
