--- a/references.bib
+++ b/references.bib
@@ -410,15 +410,6 @@ series = {AAMAS '21}
 	keywords = {toread, probability},
 }
 
-@book{ferme_2018,
-    title = {Belief Change},
-    series = {SpringerBriefs in Intelligent Systems},
-    publisher = {Springer},
-    year = {2018},
-    author = {Ferm{\'e}, Eduardo and Hansson, Sven Ove},
-    doi = {https://doi.org/10.1007/978-3-319-60535-7},
-}
-
 @inproceedings{yin_supervised_2011,
 	location = {New York, {NY}, {USA}},
 	title = {Semi-supervised Truth Discovery},
@@ -1211,9 +1202,48 @@ numpages = {6},
 	journal = {Artificial Intelligence}
 }
 
+@article{hansson1999survey,
+  title={A survey of non-prioritized belief revision},
+  author={Hansson, Sven Ove},
+  journal={Erkenntnis},
+  volume={50},
+  number={2},
+  pages={413--427},
+  year={1999},
+  publisher={Springer}
+}
+
+@InCollection{sep_belief_change,
+	author       =	{Hansson, Sven Ove},
+	title        =	{{Logic of Belief Revision}},
+	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
+	editor       =	{Edward N. Zalta},
+	howpublished =	{\url{https://plato.stanford.edu/archives/spr2022/entries/logic-belief-revision/}},
+	year         =	{2022},
+	edition      =	{{S}pring 2022},
+	publisher    =	{Metaphysics Research Lab, Stanford University}
+}
+
+@book{hansson1999,
+    title={A Textbook of Belief Dynamics},
+    subtitle={Theory Change and Database Updating},
+    publisher={Kluwer Academic Publishers},
+    year={1999},
+    author={Hansson, Sven Ove},
+}
+
+@book{ferme_2018,
+    title = {Belief Change},
+    series = {SpringerBriefs in Intelligent Systems},
+    publisher = {Springer},
+    year = {2018},
+    author = {Ferm{\'e}, Eduardo and Hansson, Sven Ove},
+    doi = {https://doi.org/10.1007/978-3-319-60535-7},
+}
+
 @article{ferme1999selective,
   title={Selective revision},
-  author={Ferm{\'e}, Eduardo L and Hansson, Sven Ove},
+    author = {Ferm{\'e}, Eduardo and Hansson, Sven Ove},
   journal={Studia Logica},
   volume={63},
   number={3},
@@ -1226,12 +1256,11 @@ numpages = {6},
 	doi = {10.2307/2694963},
 	url = {https://doi.org/10.2307%2F2694963},
 	year = 2001,
-	month = {12},
 	publisher = {Cambridge University Press ({CUP})},
 	volume = {66},
 	number = {4},
 	pages = {1581--1596},
-	author = {Sven Ove Hansson and Eduardo Leopoldo Ferm{\'{e}} and John Cantwell and Marcelo Alejandro Falappa},
+	author = {Hansson, Sven Ove and Ferm{\'e}, Eduardo and Cantwell, John and Falappa, Marcelo Alejandro},
 	title = {Credibility limited revision},
 	journal = {Journal of Symbolic Logic}
 }
@@ -1293,17 +1322,6 @@ numpages = {6},
     doi = {https://doi.org/10.1016/S1574-6526(07)03008-8},
     url = {https://www.sciencedirect.com/science/article/pii/S1574652607030088},
     author = {Pavlos Peppas},
-}
-
-@article{hansson1999survey,
-  title={A survey of non-prioritized belief revision},
-  author={Hansson, Sven Ove},
-  journal={Erkenntnis},
-  volume={50},
-  number={2},
-  pages={413--427},
-  year={1999},
-  publisher={Springer}
 }
 
 @inproceedings{hunter_building_21,
@@ -1784,17 +1802,6 @@ pages="50--65",
   school={Institute for Logic, Language and Computation, University of Amsterdam}
 }
 
-@InCollection{sep_belief_change,
-	author       =	{Hansson, Sven Ove},
-	title        =	{{Logic of Belief Revision}},
-	booktitle    =	{The {Stanford} Encyclopedia of Philosophy},
-	editor       =	{Edward N. Zalta},
-	howpublished =	{\url{https://plato.stanford.edu/archives/spr2022/entries/logic-belief-revision/}},
-	year         =	{2022},
-	edition      =	{{S}pring 2022},
-	publisher    =	{Metaphysics Research Lab, Stanford University}
-}
-
 @article{booth_belief_2011,
 	title = {Belief Change},
 	author = {Booth, Richard and Meyer, Thomas},
@@ -1831,15 +1838,6 @@ pages="50--65",
     year={1992},
     pages={183–203},
     collection={Cambridge Tracts in Theoretical Computer Science}}
-
-@book{hansson1999,
-    title={A Textbook of Belief Dynamics},
-    subtitle={Theory Change and Database Updating},
-    publisher={Kluwer Academic Publishers},
-    series={Sven Ove Hansson},
-    year={1999},
-    author={Sven Ove Hansson},
-}
 
 @article{makinson1997screened,
   title={Screened revision},
