WIP introduction on learning stuff

--- a/references.bib
+++ b/references.bib
@@ -1399,7 +1399,6 @@ abstract = "This survey covers recent contributions from the artificial intellig
 	number = {5},
 	journal = {Studia Logica},
 	author = {Baltag, Alexandru and Gierasimczuk, Nina and Smets, Sonja},
-	month = oct,
 	year = {2019},
 	keywords = {belief revision, logic, toread},
 	pages = {917--947},
@@ -1530,15 +1529,6 @@ abstract = "This survey covers recent contributions from the artificial intellig
   pages={100485},
   year={2019},
   publisher={Elsevier}
-}
-
-@incollection{kelly1997reliable,
-  title={Reliable belief revision},
-  author={Kelly, Kevin and Schulte, Oliver and Hendricks, Vincent},
-  booktitle={Logic and Scientific Methods},
-  pages={383--398},
-  year={1997},
-  publisher={Springer}
 }
 
 @ARTICLE{xiao_22,
@@ -1859,4 +1849,36 @@ pages="50--65",
     address="Berlin, Heidelberg",
     pages="86--107",
     }
+
+@inproceedings{kelly1998learning,
+  title={The learning power of belief revision},
+  author={Kelly, Kevin},
+  booktitle={TARK},
+  volume={98},
+  pages={111--124},
+  year={1998},
+  organization={Citeseer}
+}
+
+@article{Kelly_1999,
+        title = {Iterated Belief Revision, Reliability, and Inductive Amnesia},
+        doi = {10.1023/a:1005444112348},
+        url = {https://doi.org/10.1023%2Fa%3A1005444112348},
+        year = 1999,
+        publisher = {Springer Science and Business Media {LLC}},
+        volume = {50},
+        number = {1},
+        pages = {7--53},
+        author = {Kevin Kelly},
+        journal = {Erkenntnis}
+}
+
+@incollection{kelly1997reliable,
+  title={Reliable belief revision},
+  author={Kelly, Kevin and Schulte, Oliver and Hendricks, Vincent},
+  booktitle={Logic and Scientific Methods},
+  pages={383--398},
+  year={1997},
+  publisher={Springer}
+}
 
