--- a/references.bib
+++ b/references.bib
@@ -1722,7 +1722,7 @@ pages="50--65",
 
 @inproceedings{van2012evidence,
   title={Evidence logic: A new look at neighborhood structures},
-  author={Johan van Benthem and David Fern{\'{a}}ndez-Duque and Eric Pacuit},
+  author={Johan van {Benthem} and David Fern{\'{a}}ndez-Duque and Eric Pacuit},
   year={2012},
   booktitle={Advances in Modal Logic},
   publisher={College Publications},
@@ -1882,3 +1882,9 @@ pages="50--65",
   publisher={Springer}
 }
 
+@book{zach2019,
+	publisher = {Open Logic Project},
+	author = {Richard Zach},
+	title = {Boxes and Diamonds: An Open Introduction to Modal Logic},
+	year = {2019}
+}
