Typos and suggestions from Richard

--- a/main.tex
+++ b/main.tex
@@ -4,7 +4,11 @@
 % \usepackage{newpxtext} % palatino font
 % \usepackage[T1]{fontenc}
 \usepackage{xcolor}
-\usepackage[backend=biber,backref=true,style=authoryear,useprefix]{biblatex}
+\usepackage[backend=biber,
+            backref=true,
+            style=authoryear,
+            useprefix,
+            maxbibnames=99]{biblatex}
 \usepackage{hyperref}
 \usepackage{amsmath}
 \usepackage{amsthm}
