--- a/references.bib
+++ b/references.bib
@@ -655,7 +655,7 @@ series = {AAMAS '21}
 }
 
 @book{laslier2010handbook,
-  title={Handbook on approval voting},
+  title={Handbook On Approval Voting},
   author={Laslier, Jean-Fran{\c{c}}ois and Sanver, M Remzi},
   year={2010},
   publisher={Springer Science \& Business Media}
@@ -1355,7 +1355,6 @@ pages="543--555",
     booktitle = {{Proceedings of the 17th International Conference on Principles of Knowledge Representation and Reasoning}},
     pages     = {738--747},
     year      = {2020},
-    month     = {9},
     doi       = {10.24963/kr.2020/76},
     url       = {https://doi.org/10.24963/kr.2020/76},
   }
@@ -1679,7 +1678,7 @@ pages="50--65",
 
 @inproceedings{dastani2004inferring,
   title={Inferring trust},
-  author={Dastani, Mehdi and Herzig, Andreas and Hulstijn, Joris and van Der Torre, Leendert},
+  author={Dastani, Mehdi and Herzig, Andreas and Hulstijn, Joris and van der Torre, Leendert},
   booktitle={International Workshop on Computational Logic in Multi-Agent Systems},
   pages={144--160},
   year={2004},
