--- a/references.bib
+++ b/references.bib
@@ -184,6 +184,17 @@ series = {AAMAS '21}
 	Title = {Judgment Aggregation},
 	Year = {2016}}
 
+@incollection{conitzer_manipulation_2016,
+	Address = {New York, NY, USA},
+	Author = {Vincent Conitzer and Toby Walsh},
+	Booktitle = {Handbook of Computational Social Choice},
+	Chapter = {6},
+	Edition = {1st},
+	Editor = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
+	Publisher = {Cambridge University Press},
+	Title = {Barriers to Manipulation in Voting},
+	Year = {2016}}
+
 @incollection{brandt2016introduction,
 	Address = {New York, NY, USA},
 	Author = {Brandt, Felix and Conitzer, Vincent and Endriss, Ulle and Lang, J{\'e}r\^{o}me and Procaccia, Ariel D.},
@@ -1371,7 +1382,6 @@ doi = "https://doi.org/10.1016/j.inffus.2005.08.001",
 url = "http://www.sciencedirect.com/science/article/pii/S1566253505000771",
 author = "Eric Grégoire and Sébastien Konieczny",
 keywords = "Logic-based fusion, Information fusion, Belief fusion, Goal fusion",
-abstract = "This survey covers recent contributions from the artificial intelligence research literature about logic-based information fusion. First, the main current approaches dealing with the standard propositional logic formalism are presented and compared. Then, techniques for fusing weighted belief bases are discussed. Finally, relationships between propositional information fusion and related areas such as belief revision and multi-agent negotiation are mentioned."
 }
 
 @article{baltag_tt_2019,
@@ -1867,3 +1877,14 @@ pages="50--65",
 	title = {Boxes and Diamonds: An Open Introduction to Modal Logic},
 	year = {2019}
 }
+
+@inproceedings{endriss2020analysis,
+  title={Analysis of one-to-one matching mechanisms via SAT solving: Impossibilities for universal axioms},
+  author={Endriss, Ulle},
+  booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+  volume={34},
+  number={02},
+  pages={1918--1925},
+  year={2020}
+}
+
